# GULAG

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
CMake/: config.h.in  imgui.ini
example/: CMakeLists.txt  main.cpp
include/: GUI_Core.h  config.h  simState.h  timer.h
include/3D/: Dummy.h  Entity.h  Folder.h  MultiBody.h  Object.h  Scene.h
include/UI/: UIGraph.h  UIHelper.h  UIWindow.h  UIWindow_AddEntityDialog.h  UIWindow_Console.h  UIWindow_LibraryViewer.h  UIWindow_PlotingWorkspace.h  UIWindow_PropertiesViewer.h  UIWindow_SceneTreeViewer.h  UIWindow_ToolPanel.h
resources/: CAR_App.rc
resources/Shaders/: default.frag  default.vert
src/: GUI_Core.cpp
src/3D/: Entity.cpp  Folder.cpp  MultiBody.cpp  Object.cpp  Scene.cpp
src/UI/: UIGraph.cpp  UIHelper.cpp  UIWindow_AddEntityDialog.cpp  UIWindow_Console.cpp  UIWindow_LibraryViewer.cpp  UIWindow_PlotingWorkspace.cpp  UIWindow_PropertiesViewer.cpp  UIWindow_SceneTreeViewer.cpp  UIWindow_ToolPanel.cpp
